--- a/src/component/navbar/navbar.component.scss
+++ b/src/component/navbar/navbar.component.scss
@@ -3,3 +3,20 @@
     border: 1px solid red;
 
 }
+
+#nav-bar-links{
+
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    height: 48px;
+
+    li{
+        
+        font-weight: 450;
+        display: inline;
+        padding: 12px;
+
+    }
+
+}
