--- a/src/component/mid/home/home.component.scss
+++ b/src/component/mid/home/home.component.scss
@@ -5,9 +5,18 @@
 }
 
 .thumbnail-card{
+
     width: 40vw;
     height: 200px;
-    border: 1px solid red;
+    border: 1px solid #d4d4d4;
     border-radius: 6px;;
+    box-shadow: 1px 1px 2px #d4d4d4;
+
+}
+
+.thumbnail-card:hover{
+
+    box-shadow: 0px 0px 1px;
+    transition: box-shadow 0.25s ease-in;
 
 }
