--- a/src/component/mid/home/home.component.scss
+++ b/src/component/mid/home/home.component.scss
@@ -1,3 +1,9 @@
+body{
+
+    background-color: #f0f0f0;
+    
+}
+
 .top-grid-thumbnail-link{
 
     border: 1px solid grey;
@@ -20,3 +26,5 @@
     transition: box-shadow 0.25s ease-in;
 
 }
+
+
