--- a/src/component/mid/home/dataset-table/dataset-table.component.scss
+++ b/src/component/mid/home/dataset-table/dataset-table.component.scss
@@ -1,13 +1,13 @@
 .main-table-grid{
 
   display:grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   // padding: 10px;
 
 }
 
 .data-grid-container{
-
+  width: 100%;
   height: 400px;
   overflow: scroll;
   text-align: center;
