--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,11 @@
 :root {
   
-  width: 100vw;
+  /* width: 100vw; */
   padding: 0;
   margin: 0;
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+}
 
+body {
+  background-color: #f0f0f0 !important;
 }
